Updated College Details

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h3 class="subsection-title"><span class="terminal-prompt">$</span> Education</h3>
                 <div class="education-card">
                     <div class="edu-header">
-                        <h4>Technological University Dublin (TU Dublin)</h4>
+                        <h4>Technological University Dublin</h4>
                         <span class="date-badge">2022 - Present</span>
                     </div>
                     <p class="degree">BSc in Computer Science Infrastructure</p>
